# wasm-stack-trace

./: .gitignore  .npmignore  Cargo.toml  README.md  build.js  index.js  package.json  test.js
.cargo/: config.toml
fibonacci/: Cargo.toml  README.md
fibonacci/.cargo/: config.toml
fibonacci/src/: lib.rs
src/: lib.rs
