cargo-features = ["trim-paths"]

[package]
name = "backtrace-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
addr2line = { version = "0.25.1", default-features = false, features = [
    "wasm",
    "rustc-demangle",
] }
gimli = { version = "0.32.3", default-features = false, features = [
    "read",
    "std",
] }
object = { version = " 0.37.3", default-features = false, features = [
    "wasm",
    "read",
    "std",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
trim-paths = true
